correction align. et style

--- a/front-end/src/app/quizz/jouer-quizz/jouer-quizz.component.scss
+++ b/front-end/src/app/quizz/jouer-quizz/jouer-quizz.component.scss
@@ -22,16 +22,53 @@
 
   .answers-container{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+
+
     margin-top: 5%;
+
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
   }
-  
+
+  input[type=radio] {
+    display: none;
+  }
+
+  label{
+    font-weight: bold;
+    font-size: 40px;
+  }
+
   .answer{
-    width: 50%;
+    /*border: 2px solid #ccc;*/
+
+    padding: 10px;
+
+    padding-left: 2%;
+    padding-right: 2%;
+
+    margin: 3%;
+
+    border-radius: 50px;
+
+    text-align: center;
+
+    display: inline-block;
+    width: fit-content;
+    min-width: 40%;
+    height: fit-content;
+    
     box-sizing: border-box;
-    padding: 5px;
-    margin-top: 3%;
+  }
+
+  .answer:hover{
+    background-color: #ccc;
+  }
+
+  /* A FINIR */
+  .answer input:checked ~ .checkmark{
+    background-color: #ccc;
   }
 
   .check-container {
